fixing gap and added navbar js

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ html {
 	background: black;
 }
 body {
+	margin-top: 100px;
 	color: #fff;
 	background: black;
 } 
@@ -104,7 +105,7 @@ ul.ultimatelist {
  }
 
   img {
-	  width: 75%;
+	  width: 50%;
   }
 
 
